plugins {
  id 'maven-publish'
}

ext {
  /* Project Information */
  projectGroup = 'com.unideb.qsa'
  projectVersion = project.getProperties().get('release.version') ?: 'RELEASE.VERSION.UNKNOWN'
  /* Secrets */
  // Note: Use your username and token
  githubToken = System.getenv('GITHUB_TOKEN') ?: 'YOUR_TOKEN'
  githubUsername = System.getenv('GITHUB_USERNAME') ?: 'YOUR_USERNAME'
  print('Release version [' + projectVersion + ']')
}

apply plugin: 'maven'
apply plugin: 'checkstyle'
apply plugin: 'java'
apply plugin: 'java-library'

repositories {
  mavenLocal()
  mavenCentral()
  jcenter()
  maven {
    url 'https://jitpack.io'
  }
}

checkstyle {
  toolVersion = '8.38'
  configFile = file("${rootDir}/support/code-formatting/checkstyle/checkstyle.xml")
  configDir = file("${rootDir}/support/code-formatting/checkstyle/")
  showViolations = true
  ignoreFailures = false
}

dependencies {
  implementation 'com.google.code.gson:gson:2.8.6'
}

publishing {
  repositories {
    maven {
      name = 'GitHubPackages'
      url = uri('https://maven.pkg.github.com/queueing-systems-assistance/qsa')
      credentials {
        username = githubUsername
        password = githubToken
      }
    }
  }
  publications {
    gpr(MavenPublication) {
      from(components.java)
    }
  }
}

sourceCompatibility = '11'
group = projectGroup
version = projectVersion

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
}
